# ctrader-ibkr-copybot

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  LICENSE  Procfile  README.md  docker-compose.yml  nixpacks.toml  pyproject.toml  requirements-ctrader.txt  requirements.txt
src/copybot/: __init__.py  config.py  main.py
src/copybot/api/: routes.py
src/copybot/core/: bus.py  logging.py  models.py
src/copybot/execution/: engine.py
src/copybot/execution/brokers/: base.py  ctrader.py  ctrader_client.py  ctrader_volume.py  ibkr.py  paper.py
src/copybot/filters/: confirmation.py
src/copybot/signals/: receiver.py
tests/: test_ctrader_client.py  test_ctrader_volume.py  test_exposure.py  test_flow.py
