[project]
name = "copybot"
version = "0.1.0"
description = "Robot de copy trading semi-autonome (cTrader / IBKR)"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
# Connecteur cTrader (réutilise les messages protobuf). Voir requirements-ctrader.txt.
ctrader = ["ctrader-open-api>=0.9.2"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
